- Switch worlds to the spawn point before spawning if the spawn point is on a different world (fixes broken tournament resuming on other worlds).
- Use GetRadarAltitudeAtPos instead of radarAltitude as the latter reads wrong for our purposes when underwater.
- Fix the bad check preventing competition start if a vessel doesn't take off.
- Fix NRE in CheckEngage
IMPROVEMENTS
- Set the default evasionTimeThreshold to 0.1s.
- Make all custom paths relative to the KSP install directory to remove dependence on running location (PRE needs fixing for this to be usable though).
- Count rockets fired separately from shots fired and calculate rocket accuracy from the number of rocket strikes.
- Disable guard mode on spawned vessels during spawning and clear their current target.
- Extend vessel easing during spawning until a vessel's cockpit is in the water (or it has stopped sinking) to allow it to settle a bit.
- Use more precision in the csv file for the cumulative scores.

v1.4.13.1
IMPROVEMENTS
- Apply/de-apply the intake hack when toggling the option in the settings.
- Hack intakes (if enabled) on newly spawned vessels spawned by VesselMover or SPH→runway.
- Count rockets fired separately from shots fired and calculate rocket accuracy from the number of rocket strikes.

v1.4.13.0
FIXES
- Tournaments:
	- Fix some typos and bugs in assist counting in the local tournament parser.
	- Clear rocket dictionaries between heats. Compute assists under the same conditions for local and remote tournaments.
	- Cause a spawn failure instead of throwing an exception so that tournaments can retry spawning.
- Craft/Battle Damage:
	- Fix SelfSealingTanks being addable to engines.
	- Fix SelfSealingTanks not showing on/off status on load.
	- Fix SelfSealingTanks not respecting symmetry.
	- Re-add ModuleSelfSealingTank to Cockpits (for armored cockpits).
	- Fix fires not extinguishing if fuel < 0.
	- Fix engine fire behavior, now capped to max one fire at a time.